# nearby

./: .bazelrc  .gitignore  .gitmodules  MODULE.bazel  WORKSPACE.bzlmod  non_module_deps.bzl
connections/: BUILD
internal/platform/implementation/g3/: BUILD
internal/platform/implementation/linux/: BUILD  bluetooth_classic_device.cc  bluetooth_classic_device.h  bluetooth_devices.cc
rust/: BUILD  Cargo.toml  build.rs
rust/src/: main.rs
sharing/: BUILD
sharing/certificates/: BUILD  nearby_share_certificate_manager_impl.cc  nearby_share_certificate_manager_impl.h  nearby_share_certificate_manager_impl_unittest.cc  nearby_share_decrypted_public_certificate.cc  nearby_share_private_certificate.cc
sharing/client/: BUILD  nearby_share_client.h  nearby_share_client_impl.cc  nearby_share_client_impl.h  nearby_share_client_impl_unittest.cc
sharing/contacts/: BUILD  nearby_share_contact_downloader_impl.h  nearby_share_contact_downloader_impl_unittest.cc  nearby_share_contact_manager_impl.cc  nearby_share_contact_manager_impl_unittest.cc
sharing/flags/: BUILD
sharing/internal/base/: BUILD
sharing/local_device_data/: BUILD  nearby_share_device_data_updater_impl.h  nearby_share_device_data_updater_impl_unittest.cc  nearby_share_local_device_data_manager_impl.cc  nearby_share_local_device_data_manager_impl_unittest.cc
